<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Nombre: </string>
    <string name="Type">Tipo: </string>
    <string name="Vendor">Vendor: </string>
    <string name="Version">Version: </string>
    <string name="Value">Value: </string>
</resources>
